log
Thu 16 May 2024 05:17:08 AM UTC: 
 sudoku.c | 90 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 82 insertions(+), 8 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:56:19: error: implicit declaration of function ‘_createNode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   56 |       Node* aux = _createNode(k);
      |                   ^~~~~~~~~~~
      |                   createNode
sudoku.c:56:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
sudoku.c:71:24: error: comparison between pointer and integer [-Werror]
   71 |                if (aux == n->sudo[i][j])
      |                        ^~
sudoku.c:83:27: error: comparison between pointer and integer [-Werror]
   83 |                   if (aux == n->sudo[i][j])
      |                           ^~
cc1: all warnings being treated as errors
Compilation failed
45c0919
Thu 16 May 2024 05:18:42 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:56:18: error: implicit declaration of function ‘_createNode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   56 |       int* aux = _createNode(k);
      |                  ^~~~~~~~~~~
      |                  createNode
sudoku.c:56:18: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
sudoku.c:71:24: error: comparison between pointer and integer [-Werror]
   71 |                if (aux == n->sudo[i][j])
      |                        ^~
sudoku.c:83:27: error: comparison between pointer and integer [-Werror]
   83 |                   if (aux == n->sudo[i][j])
      |                           ^~
cc1: all warnings being treated as errors
Compilation failed
ec9483f
Thu 16 May 2024 06:27:57 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:56:7: error: unknown type name ‘node’; did you mean ‘Node’?
   56 |       node* aux = _createNode(k);
      |       ^~~~
      |       Node
sudoku.c:56:19: error: implicit declaration of function ‘_createNode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   56 |       node* aux = _createNode(k);
      |                   ^~~~~~~~~~~
      |                   createNode
sudoku.c:56:19: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
sudoku.c:67:13: error: ‘aux’ undeclared (first use in this function)
   67 |             aux = front(l);
      |             ^~~
sudoku.c:67:13: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
065437c
Thu 16 May 2024 07:15:41 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
505389e
Thu 16 May 2024 07:21:46 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|4
total_score: 10/70
4521d8f
Thu 16 May 2024 08:02:21 PM UTC: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:140:7: error: value computed is not used [-Werror=unused-value]
  140 |       *cont++;
      |       ^~~~~~~
sudoku.c:152:29: error: expected ‘)’ before ‘;’ token
  152 |          push(s, popFront(l);)
      |              ~              ^
      |                             )
sudoku.c:152:18: error: invalid use of void expression
  152 |          push(s, popFront(l);)
      |                  ^~~~~~~~~~~
sudoku.c:152:31: error: expected ‘;’ before ‘}’ token
  152 |          push(s, popFront(l);)
      |                               ^
      |                               ;
  153 | 
  154 |       }
      |       ~                        
cc1: all warnings being treated as errors
Compilation failed
af4c8cf
Thu 16 May 2024 08:02:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:140:7: error: value computed is not used [-Werror=unused-value]
  140 |       *cont++;
      |       ^~~~~~~
sudoku.c:152:18: error: invalid use of void expression
  152 |          push(s, popFront(l))
      |                  ^~~~~~~~~~~
sudoku.c:152:30: error: expected ‘;’ before ‘}’ token
  152 |          push(s, popFront(l))
      |                              ^
      |                              ;
  153 | 
  154 |       }
      |       ~                       
cc1: all warnings being treated as errors
Compilation failed
dafdd73
Thu 16 May 2024 08:04:49 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
799f7f0
Thu 16 May 2024 08:09:15 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
fca6b14
Thu 16 May 2024 08:15:04 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:56:7: error: unknown type name ‘node’; did you mean ‘Node’?
   56 |       node* aux = _createNode(k);
      |       ^~~~
      |       Node
sudoku.c:56:19: error: implicit declaration of function ‘_createNode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   56 |       node* aux = _createNode(k);
      |                   ^~~~~~~~~~~
      |                   createNode
sudoku.c:56:19: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
sudoku.c:67:13: error: ‘aux’ undeclared (first use in this function)
   67 |             aux = front(l);
      |             ^~~
sudoku.c:67:13: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
f85f071
Thu 16 May 2024 08:21:23 PM UTC: 
 sudoku.c | 22 ++++------------------
 1 file changed, 4 insertions(+), 18 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:59:18: error: ‘k’ undeclared (first use in this function)
   59 |             for (k = 1; k <= 9; k++)
      |                  ^
sudoku.c:59:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
308497d
Thu 16 May 2024 08:21:41 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
aac1dbc
Thu 16 May 2024 10:02:46 PM UTC: 
 sudoku.c | 19 ++++++++++---------
 1 file changed, 10 insertions(+), 9 deletions(-)
 tests:  4|3
total_score: 30/70
30e6962
Thu 16 May 2024 10:03:49 PM UTC: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  4|3
total_score: 30/70
750906e
Fri 17 May 2024 10:42:02 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:106:18: error: ‘k’ undeclared (first use in this function)
  106 |       int i = 3*(k/3) + (p/3);
      |                  ^
sudoku.c:106:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:107:11: error: unused variable ‘j’ [-Werror=unused-variable]
  107 |       int j = 3*(k%3) + (p%3);
      |           ^
sudoku.c:106:11: error: unused variable ‘i’ [-Werror=unused-variable]
  106 |       int i = 3*(k/3) + (p/3);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
65cdbba
Fri 17 May 2024 11:10:50 PM UTC: 
 sudoku.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
674d486
Fri 17 May 2024 11:31:08 PM UTC: 
 sudoku.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  3|3
total_score: 25/70
9c92b30
